--- a/pwn.college/Writeups-Program_Misuse.ipynb
+++ b/pwn.college/Writeups-Program_Misuse.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# pwn.college\n",
     "## Program Misuse\n",
-    "> https://dojo.pwn.college/dojos\n",
+    "> https://dojo.pwn.college/cse466/challenges/misuse\n",
     "\n",
     "---\n",
     "\n",
@@ -85,7 +85,8 @@
     "\n",
     "---\n",
     "\n",
-    "+ [Oh my zsh with autosuggestions & syntax-highlighting.md](https://www.google.com/search?channel=fs&client=ubuntu&q=oh+my+zsh)"
+    "+ [Oh my zsh with autosuggestions & syntax-highlighting.md](https://www.google.com/search?channel=fs&client=ubuntu&q=oh+my+zsh)\n",
+    "+ [DISABLE ZSH AUTO UPDATE](https://stackoverflow.com/questions/11378607/oh-my-zsh-disable-would-you-like-to-check-for-updates-prompt)"
    ]
   },
   {
