add new way to solve day6-part2

--- a/adventofcode.com/adventOfCode-2023.ipynb
+++ b/adventofcode.com/adventOfCode-2023.ipynb
@@ -82,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 999 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4066e167",
+   "id": "60b2fcf8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -254,7 +254,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.05 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7614d6d",
+   "id": "0da467d8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e4e77a7",
+   "id": "9919405e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -599,7 +599,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 998 µs\n"
      ]
     },
     {
@@ -668,7 +668,7 @@
      "text": [
       "30\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 2 ms\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d65a525",
+   "id": "937ff700",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -812,7 +812,7 @@
      "text": [
       "35\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 998 µs\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -931,7 +931,7 @@
      "text": [
       "46\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 2.02 ms\n"
      ]
     }
    ],
@@ -955,14 +955,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "409b5399",
+   "id": "9899d8c4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "60476448",
+   "id": "31dfa503",
    "metadata": {},
    "source": [
     "## Day 6: Wait For It"
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43f50f9a",
+   "id": "9b6703db",
    "metadata": {},
    "source": [
     "### part 1"
@@ -979,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c7858d58",
+   "id": "b3a7e3c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7b6fa3f0",
+   "id": "45963abd",
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.01 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -1027,14 +1027,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a485577",
+   "id": "a5c1cc9a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6aaff528",
+   "id": "b16eb260",
    "metadata": {},
    "source": [
     "### part 2"
@@ -1043,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9a4a0ebc",
+   "id": "f23e0e64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,15 +1056,15 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5b1fce3a",
+   "id": "5c350989",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4.5 s\n",
-      "Wall time: 4.49 s\n"
+      "CPU times: total: 4.59 s\n",
+      "Wall time: 4.62 s\n"
      ]
     },
     {
@@ -1088,7 +1088,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79174d3a",
+   "id": "1beb3850",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "4f0df6e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 609 ms\n",
+      "Wall time: 759 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "23632299"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from sympy import symbols, reduce_inequalities\n",
+    "x = symbols('x')\n",
+    "eq = reduce_inequalities([x*(t-x) > d], x)\n",
+    "constants = [arg.rhs if arg.lhs==x else arg.lhs for arg in eq.args]\n",
+    "round(abs(float(constants[0]) - float(constants[1])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "feeb6c60",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc4b107d",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-danger\">\n",
+    "  <strong>solve this chal with z3 isn't good idea :)</strong>\n",
+    "</div>\n",
+    "\n",
+    "```py\n",
+    "from z3 import *\n",
+    "x = Int('x')\n",
+    "s = Solver() \n",
+    "s.add(0<x, x<t)\n",
+    "s.add(x*(t-x) > d)\n",
+    "cnt = 0\n",
+    "while s.check()==sat:\n",
+    "    s.add(x!=s.model()[x])\n",
+    "    cnt+=1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdd0b863",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1096,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbe5f70e",
+   "id": "455ba0dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1104,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "450f39d5",
+   "id": "1d07fbe6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1112,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eb3bb8c",
+   "id": "f626b62d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1120,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56fac837",
+   "id": "3d396bf0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1128,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa5e4e9",
+   "id": "a18e158f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1136,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67cdec7d",
+   "id": "7b1df9e5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1144,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b2d6c2b",
+   "id": "8e084c12",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1152,7 +1224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa16ef23",
+   "id": "74fd47dc",
    "metadata": {},
    "outputs": [],
    "source": []
