add adventOfCode2023 - Day 7: Camel Cards

--- a/adventofcode.com/adventOfCode-2023.ipynb
+++ b/adventofcode.com/adventOfCode-2023.ipynb
@@ -599,7 +599,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 998 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -931,7 +931,7 @@
      "text": [
       "46\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 2.02 ms\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -1063,8 +1063,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4.59 s\n",
-      "Wall time: 4.62 s\n"
+      "CPU times: total: 4.92 s\n",
+      "Wall time: 4.99 s\n"
      ]
     },
     {
@@ -1103,8 +1103,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 609 ms\n",
-      "Wall time: 759 ms\n"
+      "CPU times: total: 562 ms\n",
+      "Wall time: 715 ms\n"
      ]
     },
     {
@@ -1174,25 +1174,234 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "7934039a",
+   "metadata": {},
+   "source": [
+    "## Day 7: Camel Cards"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "994943e6",
+   "metadata": {},
+   "source": [
+    "### part 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "1d07fbe6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ALL = ['2', '3', '4', '5', '6', '7', '8', '9', 'T', 'J', 'Q', 'K', 'A']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "id": "b3af50b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def position(a):\n",
+    "    values = set(a)\n",
+    "    cnt = sorted(map(a.count, values))\n",
+    "    if len(values)==1: # Five of a kind\n",
+    "        return 6\n",
+    "    if len(values)==2:\n",
+    "        if cnt[0]==1:\n",
+    "            return 5 # Four of a kind\n",
+    "        return 4 # Full house\n",
+    "    if len(values)==3:\n",
+    "        if cnt[-1]==3:\n",
+    "            return 3 # Three of a kind\n",
+    "        return 2 # Two pair\n",
+    "    if len(values)==4:\n",
+    "        return 1 # One pair\n",
+    "    return 0 # High card"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "f626b62d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Cards:\n",
+    "    def __init__(self, val, bid):\n",
+    "        self.value = val\n",
+    "        self.bid = int(bid)\n",
+    "        self.type = position(val)\n",
+    "    \n",
+    "    def __lt__(self, other):\n",
+    "        if self.type == other.type:\n",
+    "            for c1, c2 in zip(self.value, other.value):\n",
+    "                if c1==c2:\n",
+    "                    continue\n",
+    "                return ALL.index(c1) < ALL.index(c2)\n",
+    "            return False\n",
+    "        return self.type < other.type\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.value} {self.type} with bid={self.bid}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6a1976f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"\"\"\n",
+    "32T3K 765\n",
+    "T55J5 684\n",
+    "KK677 28\n",
+    "KTJJT 220\n",
+    "QQQJA 483\n",
+    "\"\"\".strip().splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "da6adca8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6440"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "cards = [Cards(*item.split()) for item in s]\n",
+    "sum([(i+1)*card.bid for i, card in enumerate(sorted(cards))])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d396bf0",
+   "id": "ff3866c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "096b5c0b",
+   "metadata": {},
+   "source": [
+    "### part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0ef0c056",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ALL = ['J', '2', '3', '4', '5', '6', '7', '8', '9', 'T', 'Q', 'K', 'A']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6ed1bdd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def position(a):\n",
+    "    d = {x:a.count(x) for x in set(a.replace('J', ''))}\n",
+    "    d = dict(sorted(d.items(), key=lambda item: item[1]))\n",
+    "    a = a.replace(\"J\", list(d.keys())[-1]) if d else \"AAAAA\"\n",
+    "    values = set(a)\n",
+    "    cnt = sorted(map(a.count, values))\n",
+    "    if len(values)==1: # Five of a kind\n",
+    "        return 6\n",
+    "    if len(values)==2:\n",
+    "        if cnt[0]==1:\n",
+    "            return 5 # Four of a kind\n",
+    "        return 4 # Full house\n",
+    "    if len(values)==3:\n",
+    "        if cnt[-1]==3:\n",
+    "            return 3 # Three of a kind\n",
+    "        return 2 # Two pair\n",
+    "    if len(values)==4:\n",
+    "        return 1 # One pair\n",
+    "    return 0 # High card"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "fb01dca5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"\"\"\n",
+    "32T3K 765\n",
+    "T55J5 684\n",
+    "KK677 28\n",
+    "KTJJT 220\n",
+    "QQQJA 483\n",
+    "\"\"\".strip().splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e5ed08a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5905"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "cards = [Cards(*item.split()) for item in s]\n",
+    "sum([(i+1)*card.bid for i, card in enumerate(sorted(cards))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1ee2859",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1200,7 +1409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a18e158f",
+   "id": "cd6a9f6c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1208,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1df9e5",
+   "id": "c006aaff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1216,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e084c12",
+   "id": "11474f1e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1224,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74fd47dc",
+   "id": "6552369f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1232,7 +1441,63 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4a8b685",
+   "id": "8a835d66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b28bbd23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12c1e689",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d219874d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c197fe42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "805c5a2b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db5f1e52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ab4c5c6",
    "metadata": {},
    "outputs": [],
    "source": []
