add adventOfCode2023 - Day 8: Haunted Wasteland

--- a/adventofcode.com/adventOfCode-2023.ipynb
+++ b/adventofcode.com/adventOfCode-2023.ipynb
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdb00f39",
+   "id": "7dec44ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -618,7 +618,7 @@
     "res = 0\n",
     "for l in s:\n",
     "    a, b = [*map(lambda x:set(map(int,x.split())), l.split(\":\")[1].split(\"|\"))]\n",
-    "    if (p:=len(a.intersection(b))):\n",
+    "    if (p:=len(a&b)): # a.intersection(b)\n",
     "        res += 2**(p-1)\n",
     "res"
    ]
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e10f7e8b",
+   "id": "a46f8e0a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -677,7 +677,7 @@
     "d = {i:1 for i in range(len(s))}\n",
     "for i, l in enumerate(s):\n",
     "    a, b = [*map(lambda x:set(map(int,x.split())), l.split(\":\")[1].split(\"|\"))]\n",
-    "    p = len(a.intersection(b))\n",
+    "    p = len(a&b) # a.intersection(b)\n",
     "    for j in range(p):\n",
     "        d[i+j+1] += d[i]\n",
     "print(sum(d.values()))"
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4d4ad25",
+   "id": "619c4bcc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1063,8 +1063,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4.92 s\n",
-      "Wall time: 4.99 s\n"
+      "CPU times: total: 4.72 s\n",
+      "Wall time: 4.76 s\n"
      ]
     },
     {
@@ -1103,8 +1103,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 562 ms\n",
-      "Wall time: 715 ms\n"
+      "CPU times: total: 531 ms\n",
+      "Wall time: 705 ms\n"
      ]
     },
     {
@@ -1415,60 +1415,84 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c006aaff",
+   "cell_type": "markdown",
+   "id": "c4f004cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Day 8: Haunted Wasteland"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad585479",
+   "metadata": {},
+   "source": [
+    "### part 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "11474f1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "6552369f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"\"\"\n",
+    "RL\n",
+    "\n",
+    "AAA = (BBB, CCC)\n",
+    "BBB = (DDD, EEE)\n",
+    "CCC = (ZZZ, GGG)\n",
+    "DDD = (DDD, DDD)\n",
+    "EEE = (EEE, EEE)\n",
+    "GGG = (GGG, GGG)\n",
+    "ZZZ = (ZZZ, ZZZ)\n",
+    "\"\"\".strip().splitlines()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8a835d66",
+   "execution_count": 41,
+   "id": "dc85a0d9",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b28bbd23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12c1e689",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d219874d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from itertools import cycle\n",
+    "\n",
+    "def findEnd(cur):\n",
+    "    for cnt, inst in enumerate(cycle(instructions)):\n",
+    "        cur = network[cur][inst==\"R\"]\n",
+    "        if cur==\"ZZZ\":\n",
+    "            return cnt+1\n",
+    "\n",
+    "instructions = s[0]\n",
+    "network = {}\n",
+    "for l in s[2:]:\n",
+    "    a, b = l.split(\" = \")\n",
+    "    network[a] = b[1:-1].split(\", \")\n",
+    "\n",
+    "findEnd(\"AAA\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1479,25 +1503,196 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "805c5a2b",
+   "cell_type": "markdown",
+   "id": "d0051dd2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### part 2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "id": "cba6a18f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"\"\"\n",
+    "LR\n",
+    "\n",
+    "11A = (11B, XXX)\n",
+    "11B = (XXX, 11Z)\n",
+    "11Z = (11B, XXX)\n",
+    "22A = (22B, XXX)\n",
+    "22B = (22C, 22C)\n",
+    "22C = (22Z, 22Z)\n",
+    "22Z = (22B, 22B)\n",
+    "XXX = (XXX, XXX)\n",
+    "\"\"\".strip().splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "db5f1e52",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from itertools import cycle\n",
+    "from math import lcm\n",
+    "\n",
+    "def findEnd(cur):\n",
+    "    for cnt, inst in enumerate(cycle(instructions)):\n",
+    "        cur = network[cur][inst==\"R\"]\n",
+    "        if cur.endswith(\"Z\"):\n",
+    "            return cnt+1\n",
+    "\n",
+    "instructions = s[0]\n",
+    "network = {}\n",
+    "for l in s[2:]:\n",
+    "    a, b = l.split(\" = \")\n",
+    "    network[a] = b[1:-1].split(\", \")\n",
+    "\n",
+    "cur = [*filter(lambda x:x.endswith(\"A\"), network.keys())]\n",
+    "lcm(*map(findEnd, cur))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e16e60f",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ab4c5c6",
+   "id": "de510bef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ece6cb98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73161c78",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aed31b0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ff31f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01224dcf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8131e0b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5976ff75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "171910e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bef4b1b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e323059",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94f0c15b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "451567df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c1b7ca8",
    "metadata": {},
    "outputs": [],
    "source": []
