add adventOfCode2023 - Day 9: Mirage Maintenance

--- a/adventofcode.com/adventOfCode-2023.ipynb
+++ b/adventofcode.com/adventOfCode-2023.ipynb
@@ -50,7 +50,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 998 µs\n"
      ]
     },
     {
@@ -254,7 +254,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 1 ms\n"
      ]
     },
     {
@@ -599,7 +599,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 989 µs\n"
      ]
     },
     {
@@ -668,7 +668,7 @@
      "text": [
       "30\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 2 ms\n"
      ]
     }
    ],
@@ -931,7 +931,7 @@
      "text": [
       "46\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 995 µs\n"
      ]
     }
    ],
@@ -1063,8 +1063,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4.72 s\n",
-      "Wall time: 4.76 s\n"
+      "CPU times: total: 4.75 s\n",
+      "Wall time: 4.83 s\n"
      ]
     },
     {
@@ -1103,8 +1103,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 531 ms\n",
-      "Wall time: 705 ms\n"
+      "CPU times: total: 609 ms\n",
+      "Wall time: 740 ms\n"
      ]
     },
     {
@@ -1594,97 +1594,195 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ece6cb98",
+   "cell_type": "markdown",
+   "id": "0a6f4101",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Day 9: Mirage Maintenance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "616cc4ae",
+   "metadata": {},
+   "source": [
+    "### part 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "73161c78",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "aed31b0e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"\"\"\n",
+    "0 3 6 9 12 15\n",
+    "1 3 6 10 15 21\n",
+    "10 13 16 21 30 45\n",
+    "\"\"\".strip().splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "6a3369fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "114"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "def findNext(seq):\n",
+    "    lst = [seq]\n",
+    "    while any(lst[-1]):\n",
+    "        lst.append( [b-a for a,b in zip(lst[-1], lst[-1][1:])] )\n",
+    "    lst[-1].append(0)\n",
+    "    for i in range(len(lst)-2, -1, -1):\n",
+    "        lst[i].append( lst[i][-1] + lst[i+1][-1] )\n",
+    "    return lst[0][-1]\n",
+    "\n",
+    "sum([findNext([*map(int, l.split())]) for l in s])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ff31f9c",
+   "id": "66071055",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "a344b133",
+   "metadata": {},
+   "source": [
+    "- interesting function\n",
+    "---\n",
+    "```py\n",
+    "import sympy\n",
+    "\n",
+    "x = sympy.symbols('x')\n",
+    "zeropoly = x - x\n",
+    "onepoly = zeropoly + 1\n",
+    "\n",
+    "def lagrangepoly(yseq, xseq=None):\n",
+    "    \"\"\"Build a Lagrange polynomial from a sequence of `y` values.\n",
+    "    If no sequence of `x`s is given, use x = 1, 2, ...\"\"\"\n",
+    "    if xseq is None:\n",
+    "        xseq = list(range(1, len(yseq) + 1))\n",
+    "    assert len(yseq) == len(xseq)\n",
+    "\n",
+    "    result = zeropoly\n",
+    "    for j, (xj, yj) in enumerate(zip(xseq, yseq)):\n",
+    "        # Build the j'th base polynomial\n",
+    "        polyj = onepoly\n",
+    "        for m, xm in enumerate(xseq):\n",
+    "            if m != j:\n",
+    "                polyj *= (x - xm) / (xj - xm)\n",
+    "        # Add in the j'th polynomial\n",
+    "        result += yj * polyj\n",
+    "    return result\n",
+    "\n",
+    "lst = [10, 13, 16, 21, 30, 45]\n",
+    "formula = lagrangepoly(lst)\n",
+    "next_item = formula.subs(x, len(lst)+1)\n",
+    "print(sympy.expand(formula)) # x**3/3 - 2*x**2 + 20*x/3 + 5\n",
+    "print(f\"{next_item = }\") # next_item = 68\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01224dcf",
+   "id": "3b5867cd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8131e0b",
+   "cell_type": "markdown",
+   "id": "c32e244b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### part 2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5976ff75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "171910e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bef4b1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "4e323059",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"\"\"\n",
+    "0 3 6 9 12 15\n",
+    "1 3 6 10 15 21\n",
+    "10 13 16 21 30 45\n",
+    "\"\"\".strip().splitlines()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "94f0c15b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "def findPrevious(seq):\n",
+    "    lst = [seq]\n",
+    "    while any(lst[-1]):\n",
+    "        lst.append( [b-a for a,b in zip(lst[-1], lst[-1][1:])] )\n",
+    "    lst[-1].insert(0, 0)\n",
+    "    for i in range(len(lst)-2, -1, -1):\n",
+    "        lst[i].insert(0, lst[i][0] - lst[i+1][0]) \n",
+    "    return lst[0][0]\n",
+    "\n",
+    "sum([findPrevious([*map(int, l.split())]) for l in s])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "451567df",
+   "id": "8b07bb70",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1692,7 +1790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c1b7ca8",
+   "id": "0e1f10b4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1700,7 +1798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e959ed8",
+   "id": "e79fb1e1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1708,7 +1806,79 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca16543d",
+   "id": "40ebd93c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b23145c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31814a0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75f79366",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aed8a279",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "183fa62c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f672c3b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7296b87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad9057c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "493d18f9",
    "metadata": {},
    "outputs": [],
    "source": []
